--- a/style.css
+++ b/style.css
@@ -1,15 +1,6 @@
-/* html {
-    box-sizing: border-box;
-}
-  
-*, *::before, *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-} */
-
 .heading {
     margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .calculator {
